force-app/main/default/objects/Alert_Rule__mdt/Alert_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Alert Rule</label>
    <pluralLabel>Alert Rules</pluralLabel>
</CustomObject>