force-app/main/default/objects/Alert_Rule__mdt/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>