force-app/main/default/objects/Alert_Rule__mdt/fields/Source_Metric__c.field-meta.xml
<CustomField>
    <fullName>Source_Metric__c</fullName>
    <label>Source Metric</label>
    <length>255</length>
    <type>Text</type>
</CustomField>